syntax = "proto3";

package example;

option go_package = "./proto;proto";

service Greeter {
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
    rpc SayHelloAgain (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
    string name = 1;
}

message SayHelloResponse {
    string message = 1;
}