syntax = "proto3";

package example;

option go_package = "./proto;proto";

service Store {
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}
